--- a/projeto_lanchonete_zola_principal/index.html
+++ b/projeto_lanchonete_zola_principal/index.html
@@ -48,9 +48,9 @@
 <section class="home" id="home">
 
     <div class="content">
-        <h3>Pastelaria <span>&</span></h3>
-        <h3 style="color: #ff0000;">Diversos</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat labore, sint cupiditate distinctio tempora reiciendis. Maxime culpa ipsam sit modi vel laboriosam vero doloribus officiis recusandae totam, velit illo voluptas.</p>
+        <h3>Cantinho</h3>
+        <h3 style="color: #ff0000;">Nordestino</h3>
+        <p>Bem-vindo ao Cantinho Nordestino, o seu destino culinário para uma viagem de sabores autênticos do Nordeste do Brasil! No coração de nosso micro serviço de lanchonete, celebramos a riqueza da gastronomia nordestina, oferecendo uma experiência única e deliciosa para os amantes da boa comida. Explore o nosso cardápio repleto de iguarias tradicionais, cuidadosamente preparadas para transportar você diretamente para as raízes da cultura nordestina. No Cantinho Nordestino, cada prato é uma homenagem à tradição, uma fusão de aromas e sabores que refletem a paixão pela culinária regional. Sinta-se em casa e embarque conosco nessa jornada gastronômica. Estamos aqui para satisfazer os seus desejos culinários com um toque autêntico do Nordeste. Bom apetite!</p>
 
         <a href="#container normal-section" class="btn">Peça o seu agora</a>
     </div>
@@ -78,7 +78,7 @@
 
         <div class="content">
             <h3>Por Quê A Nossa Pastelaria É <span>Especial</span>? </h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus qui ea ullam, enim tempora ipsum fuga alias quae ratione a officiis id temporibus autem? Quod nemo facilis cupiditate. Ex, vel?</p>
+            <p>No Cantinho Nordestino, nossa lanchonete é mais do que um local para satisfazer o paladar; é um refúgio onde os sabores autênticos do Nordeste se encontram com a hospitalidade calorosa. Estamos comprometidos em proporcionar uma experiência gastronômica única, combinando tradição e inovação.</p>
 
             <a href="#contact" class="btn">Saber mais</a>
         </div>
@@ -1454,13 +1454,11 @@
 <section class="footer">
 
     <div class="share">
-        <a href="hhtps://www.instagram.com/zola_z10" target="_blank" style="color: rgb(245, 6, 133);" class="fab fa-instagram"></a>
-        <a href="www.linkedin.com/in/nzn02" target="_blank" style="color: rgb(7, 151, 247);" class="fab fa-linkedin" ></a>
-        <a href="https://api.whatsapp.com/send?phone=5519997579435" class="fab fa-whatsapp" target="_blank" style="color: rgb(9, 241, 9);"></a>
-        <a href="https://github.com/Dev02Zola" target="_blank" style="color: rgb(253, 251, 251);" class="fab fa-github"></a>
+        <a href="https://wa.me/5519996713656/?text=Olá do Cantinho Nordestino! 🌟 Como podemos tornar seu dia mais saboroso hoje? Estamos aqui para responder a qualquer pergunta ou ajudar com seu pedido. 😊🍴
+" class="fab fa-whatsapp" target="_blank" style="color: rgb(9, 241, 9);"></a>
     </div>
 
-    <div class="credit"> &copy; 2023 <span>Dev02Zola</span>.
+    <div class="credit"> &copy; 2023 <span>Cantinho Nordestinoix</span>.
     <p>Todos os direitos reservados</p></div>
 
 </section>
